--- a/public/seeOrderHeadersAndLines.html
+++ b/public/seeOrderHeadersAndLines.html
@@ -160,9 +160,9 @@
         gridColumnApi = params.columnApi;
 
         // Uncomment below to use backend data
-         fetch('/allOrders')
-           .then(response => response.json())
-           .then(data => gridApi.setRowData(data));
+        // fetch('/allOrders')
+         //  .then(response => response.json())
+         //  .then(data => gridApi.setRowData(data));
       }
     };
 
